--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,13 @@
       "import/extensions": [ 1, {
         "js": "always", "json": "always"
       }],
-      "no-unused-vars": "off"
+      "no-unused-vars": "off",
+      "no-use-before-define": ["error", {
+        "functions": false,
+        "classes": true,
+        "variables": true,
+        "allowNamedExports": false
+      }]
     },
     "ignorePatterns": [
       "dist/",
