Update Js & Css file V3 (Stylelint, ESLint error fix)

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -15,7 +15,7 @@
         ]
       }
     ],
-    "length-zero-no-unit": "off"
+    "length-zero-no-unit": null
   },
   "csstree/validator": true,
   "ignoreFiles": ["build/**", "dist/**", "**/reset*.css", "**/bootstrap*.css"]
