--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,8 @@
       "no-unused-vars": "off",
       "no-use-before-define": ["error", {
         "functions": false
-      }]
+      }],
+      "no-alert": "off"
     },
     "ignorePatterns": [
       "dist/",
